Optimize object property inheritance relationships Optimize project generation in CLI mode Improve test case execution results Optimize the.env file exception warning